Afegida teoria a probabilitat

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -180,7 +180,7 @@
 
 \newcommand{\obert}[1]{\mathcal{#1}}
 \newcommand{\algebra}[1]{\mathcal{#1}}
-\newcommand{\Algebra}[1]{\mathfrak{#1}}
+\newcommand{\Algebra}[1]{\algebra{#1}}
 %\newcommand{\Algebra}[1]{\algebra{#1}}
 \newcommand{\borel}{\mathcal{B}}
 \newcommand{\tancat}[1]{\obert{#1}}
@@ -200,6 +200,7 @@
 \newcommand{\Lie}{\mathcal{L}}
 \newcommand{\ev}{\mathrm{ev}}
 \newcommand{\discriminant}{\Delta}
+\newcommand{\Probabilitat}{P}
 
 \newcommand{\heads}{\mathrm{H}}
 \newcommand{\tails}{\mathrm{T}}
