Afegida teoria a Teoria de Galois

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -8,9 +8,14 @@
 \usepackage{mathtools,amssymb,amsthm}
 \usepackage{microtype}
 \usepackage[mathcal]{euscript}	% hmm
-%\usepackage{eulervm}
+\usepackage{lmodern}
+%\usepackage{mathpazo}
+%\usepackage[euler-digits]{eulervm}
 %\usepackage[framemethod=TikZ]{mdframed}
 %	\usetikzlibrary{euclide}
+%\usepackage[scaled]{beraserif}
+%\usepackage[urw-garamond]{mathdesign} % No va?
+%\usepackage{gfsartemisia-euler}
 \usepackage{tikz-cd}
 \usepackage{tkz-euclide}
 \usetkzobj{all}
@@ -171,7 +176,6 @@
 \newcommand{\rapidesa}{v}
 \newcommand{\transposta}{\top}
 \newcommand{\extensio}{/}
-\newcommand{\morfismemisterios}{\hat{f}}
 
 \newcommand{\sii}{\iff}
 \newcommand{\Sii}{\Longleftrightarrow}
