Activades referències myref

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -495,7 +495,7 @@
 	\def\@myref@opt[#1]#2{\hyperref[#2]{#1~(\ref*{#2})}}
 	\def\@myref@#1{\mynameref{#1}{\csname r@#1\endcsname}}
 \makeatother
-\def\myref#1{\ref{#1}}
+%\def\myref#1{\ref{#1}}
 %\renewcommand{\myref}[1]{\mynameref{#1}{\csname r@#1\endcsname}}
 %%\newcommand{\myref}[1]{\hyperref[#1]{\nameref{#1} \eqref{#1}}}
 
