Afegida teoria a Teoria de Galois

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -7,8 +7,9 @@
 \usepackage{subfiles}
 \usepackage{mathtools,amssymb,amsthm}
 \usepackage{microtype}
-\usepackage[mathcal]{euscript}	% hmm
 \usepackage{lmodern}
+%\usepackage[adobe-utopia]{mathdesign}
+\usepackage[mathcal]{euscript}	% hmm
 %\usepackage{mathpazo}
 %\usepackage[euler-digits]{eulervm}
 %\usepackage[framemethod=TikZ]{mdframed}
@@ -175,7 +176,7 @@
 \newcommand{\prodvec}{\mathbin{\wedge}}
 \newcommand{\rapidesa}{v}
 \newcommand{\transposta}{\top}
-\newcommand{\extensio}{/}
+\newcommand{\extensio}{/}%{\hookrightarrow}
 
 \newcommand{\sii}{\iff}
 \newcommand{\Sii}{\Longleftrightarrow}
